Trails, effects, formatting, heat fix, and import multi-lib